try for fix in background gap when resizing a mobile decive

--- a/src/style/homepage.css
+++ b/src/style/homepage.css
@@ -41,8 +41,8 @@ body[data-state="home"] .content-area h1 {
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     background: rgba(0, 0, 0, 0.6);
     z-index: 1;
     display: none;
